<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Inside the layout tag it is possible to set the data tag in order to set one or many variables. For this example we are having an User property-->
    <data>
        <import type="com.nazer.saini.fcmapp.util.TextInputValidation" />

        <variable
            name="loginData"
            type="com.nazer.saini.fcmapp.ui.fragment.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp">

            <TextView
                style="@style/TextViewLargeBlack"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:text="@string/sign_in_to_friends"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout

                android:id="@+id/text_input_email"
                style="@style/MyTextInputLayout"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:hint="@string/hint_email_phone"
                android:theme="@style/MyTextInputLayout">

                <EditText
                    android:id="@+id/ed_email"
                    style="@style/MyEditTextStyle"
                    android:addTextChangedListener="@{loginData.getEmailTextWatcher}"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@{loginData.email}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/MyTextInputLayout"
                android:theme="@style/MyTextInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <EditText
                    android:addTextChangedListener="@{loginData.getPasswordTextWatcher}"
                    android:id="@+id/ed_password"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@{loginData.password}" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot"
                style="@style/TextViewMediumBlack"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:onClick="callForgotFragment"
                android:paddingTop="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/hint_forgot_password" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signIn"
                style="@style/ButtonGreenStyle"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:onClick="@{(view)->loginData.callLogin(view)}"
                android:text="@string/sign_in"
                android:theme="@style/ButtonGreenStyle" />

            <LinearLayout
                android:layout_margin="@dimen/dimen_10dp"
                style="@style/LinearLayoutvertical"
                android:layout_weight=".5" />

            <TextView
                android:onClick="@{(view)->loginData.register(view)}"
                android:gravity="center"
                style="@style/TextViewMediumBlack"
                android:text="@string/new_user" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>